# aad-auth

./: .gitignore  .golangci-ci.yaml  CONTRIBUTING.md  Cargo.toml  README.md  TODO  aad.go  cache.go  cachedb.go  config.go  go.mod  go.sum  package-lock.json  package.json  pam.go  pam_aad.h  pam_c.go  pam_msg.go  passwd.db  shadow.db  utils_c.go
conf/: conf.go  (+1 more)
nss/: Cargo.toml  Makefile  build.rs  common.c  common_test.go  coverage.go  db_override.c  db_override_test.c  group_c.go  group_test.go  nss.go  nss_dboverride.go  nsstest.c  passwd_c.go  passwd_test.go  shadow.c  shadow_c.go  shadow_test.go  util_c.go
nss/aad-auth/: aadauth_test.go  getent.go  getent_test.go  helper_test.go  integration_test.go  internal_test.go  main.go  mock_test.go
nss/aad-auth/testdata/golden/TestFmtGetentOutput/: properly_format_with_error_ErrTryAgainEAgain  properly_format_with_error_ErrTryAgainERange  properly_format_with_multiple_entries  properly_format_with_nil_error  properly_format_with_no_entries  properly_format_with_unknown_Err
nss/aad-auth/testdata/golden/TestGetEnt/: list_entries_in_passwd  list_entries_in_shadow  list_entry_from_group_by_gid  list_entry_from_group_by_name  list_entry_from_passwd_by_name  list_entry_from_passwd_by_uid  list_entry_from_shadow_by_name  old_entries_in_group_are_cleaned  old_entries_in_passwd_are_cleaned  old_entries_in_shadow_are_cleaned  try_to_list_passwd_without_permission_on_cache
nss/aad-auth/testdata/golden/TestGetent/: list_entries_in_group  list_entries_in_passwd  list_entry_from_group_by_gid  list_entry_from_passwd_by_name  old_entries_in_passwd_are_cleaned  try_to_get_shadow_entry_with_explicit_empty_key  try_to_list_shadow_with_empty_cache
nss/aad-auth/testdata/golden/TestIntegration/: error_on_listing_group_with_empty_cache  (+26 more)
nss/aad_auth/: aadauth_test.go  error_c.go  getent.go  internal_test.go  main.go  mock_test.go
nss/integration-tests/: helper_test.go  integration_test.go
nss/integration_tests/: common_test.go  group_c.go  nss_dboverride.go  shadow_c.go  util_c.go
nss/service/: passwd.c
nss/src/: coverage.go  db_override.c  lib.rs  mod_tests.rs
nss/src/cache/: coverage.go  mod.rs  mod_tests.rs
nss/src/group/: coverage.go  mod.rs  mod_tests.rs
nss/src/logs/: coverage.go  mod.rs
nss/src/passwd/: coverage.go  mod.rs  mod_tests.rs
nss/src/shadow/: coverage.go  mod.rs  mod_tests.rs
nss/src/testutils/: coverage.go  db.rs  golden.rs  mod.rs  path.rs  require.rs  sql  states
nss/src/testutils/sql/: passwd.sql  shadow.sql
nss/src/testutils/states/: db_with_expired_users  users_in_db
nss/testdata/golden/TestNssGetGroup/: list_all_groups
nss/testdata/golden/TestNssGetGroupByGID/: no_cache_no_error_on_existing_local_group
nss/testdata/golden/TestNssGetPasswd/: list_all_users
nss/testdata/golden/TestNssGetPasswdByUID/: no_cache_no_error_on_existing_local_user
nss/testdata/golden/TestNssGetShadow/: list_all_shadow_users
nss/testdata/users_in_db/: shadow.db.dump
(+432 files in other folders)
