[package]
name = "nss_aad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
integration-tests = []

[dependencies]
ctor = "0.2.4"
libnss = "0.4.0"
libc = "0.2.147"
log = "0.4.19"
lazy_static = "^1.4"
paste = "^1"
rusqlite = "0.29.0"
serde = { version = "^1", features = ["derive"] }
syslog = "^6"
time = "0.3.22"
users = "0.11.0"
faccess = "0.2.4"
simple_logger = { version = "4.2.0", default-features = false, features = [
    "stderr",
] }
proc-macro2 = "1.0.63"

[dev-dependencies]
goldenfile = "^1.4"
serde_yaml = "0.9.24"
tempfile = "3.6.0"
test-case = "^3.1"

[build-dependencies]
cc = "^1"
