[package]
name = "nss_aad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
integration-tests = []

[dependencies]
ctor = "0.2.4"
libnss = "0.5.0"
libc = "0.2.148"
log = "0.4.20"
lazy_static = "^1.4"
paste = "^1"
rusqlite = "0.29.0"
serde = { version = "^1", features = ["derive"] }
syslog = "^6"
time = "0.3.28"
users = "0.11.0"
faccess = "0.2.4"
simple_logger = { version = "4.2.0", default-features = false, features = [
    "stderr",
] }
proc-macro2 = "1.0.66"

[dev-dependencies]
goldenfile = "^1.5"
serde_yaml = "0.9.25"
tempfile = "3.6.0"
test-case = "^3.1"

[build-dependencies]
cc = "^1"
