[package]
name = "nss_aad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
integration-tests = []

[dependencies]
ctor = "0.2.7"
libnss = "0.6.0"
libc = "0.2.152"
log = "0.4.21"
lazy_static = "^1.4"
paste = "^1"
rusqlite = "0.31.0"
serde = { version = "^1", features = ["derive"] }
syslog = "^6"
time = "0.3.34"
users = "0.11.0"
faccess = "0.2.4"
simple_logger = { version = "4.3.3", default-features = false, features = [
    "stderr",
] }
proc-macro2 = "1.0.79"

[dev-dependencies]
goldenfile = "^1.6"
serde_yaml = "0.9.34"
tempfile = "3.10.1"
test-case = "^3.3"

[build-dependencies]
cc = "^1"
